# Learnminal

./: .gitignore  Makefile  README.md  pyproject.toml
ai-backend/: actionable.py  agent.py  command_reference.py  database.py  packages.py  requirements.txt  server.py  server_stub.py  sysinfo.py  test_actionable.py  test_agent.py  test_command_reference.py  test_database.py  test_e2e.py  test_packages.py  test_persistence.py  test_server_validation.py  test_smoke.py  test_stream.py  test_tools.py  tools.py
alacritty/: Cargo.toml
alacritty/src/: cli.rs  event.rs  main.rs  scheduler.rs
alacritty/src/config/: bindings.rs  window.rs
alacritty/src/display/: mod.rs
alacritty/src/input/: keyboard.rs  mod.rs
alacritty/src/learnminal/: docs_fallback.rs  grid_extractor.rs  ipc_client.rs  journal.rs  manpage.rs  mod.rs  ollama.rs  overlay.rs  prompt.rs  settings.rs  sysinfo.rs  types.rs  verify.rs
docs/: RUST_NATIVE_DECISION.md
extra/osx/Learnminal.app/Contents/: Info.plist
ipc-contract/: schema.json
scripts/: demo.sh
