[project]
name = "learnminal"
version = "0.1.0"
description = "AI-augmented command-line learning overlay"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "adalflow>=0.2,<0.3",
    "fastapi>=0.104,<0.105",
    "uvicorn>=0.24,<0.25",
    "sse-starlette>=1.6,<2",
    "jinja2>=3.1,<4",
    "ollama>=0.4",
    "pyvis>=0.3,<0.4",
]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "hypothesis>=6,<7",
    "requests>=2.31,<3",
    "httpx>=0.27,<1",
]

[tool.uv]
package = false

# Run server:  uv sync && uv run --directory ai-backend python server.py
# Run tests:   uv sync --group dev && uv run --directory ai-backend pytest
